--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <link rel="stylesheet" href="src/styles/servicos.css">
   <link rel="stylesheet" href="src/styles/sobre.css">
   <link rel="stylesheet" href="src/styles/contato.css">
-  <title>Sensitiva Lunara</title>
+  <title>Jhordana</title>
 </head>
 
 <body>
@@ -22,7 +22,7 @@
 
 <header>
   <nav id="navbar">
-    <i class="fa-regular fa-moon"> Sensitiva Lunara</i>
+    <i class="fa-solid fa-moon"> Jhordana</i>
 
     <ul id="nav_list">
       <!-- Botão X dentro do menu lateral -->
@@ -34,7 +34,7 @@
       <li class="nav_item"><a href="#sobre">Sobre</a></li>
     </ul>
 
-    <a href="https://wa.link/mggtll">
+    <a href="https://wa.link/jnf3o9">
       <button class="btn_default">Contato</button>
     </a>
 
@@ -51,9 +51,10 @@
   
     <section id="inicio" class="hero-section">
       <div class="content">
-        <h1>Desperte Sua Energia e Transforme Sua Vida</h1>
-        <p>Sentir-se renovado e em harmonia está ao seu alcance. Agende sua consulta e viva uma experiência de transformação única.</p>
-         <a href="https://wa.link/mggtll"><button>Agende Sua Sessão</button></a>
+       <h1>Conecte-se ao Invisível e Desperte o Poder Interior</h1>
+<p>Tarot, Búzios e Magia guiados pela sabedoria ancestral. Encontre caminhos para o amor, proteção e prosperidade com orientação espiritual profunda e acolhedora.</p>
+
+         <a href="https://wa.link/jnf3o9"><button>Agende Sua Sessão</button></a>
       </div>
     </section>
   
@@ -171,12 +172,12 @@
     <section id="sobre">
       <div class="sobre-container">
         <div class="sobre-imagem">
-          <img src="imagens/sobre.png" alt="Foto de Sensitiva Lunara">
+          <img src="imagens/sobre.png" alt="">
         </div>
         <div class="sobre-texto">
-          <h2 class="title">Sobre Lunara</h2>
-          <p>Sou Lunara, Astróloga da Energia. Minha missão é acolher, orientar e transformar vidas por meio da espiritualidade e das práticas holísticas. Com uma jornada construída ao longo dos anos no trabalho com cartas, búzios e tarot, ofereço atendimentos profundos e personalizados, sempre guiados pelo respeito e pela sensibilidade às necessidades emocionais e espirituais de cada pessoa.</p>
-          <p>Também realizo trabalhos espirituais específicos, voltados para desbloqueios energéticos, reconciliações, proteção espiritual e cura interior — sempre com a força dos Orixás e a sabedoria da espiritualidade universal. Cada consulta é uma jornada única, feita com ética, empatia e compromisso. Acredito que o autoconhecimento e o equilíbrio energético são fundamentais para uma vida plena. Por isso, me dedico com carinho a cada pessoa que me procura, oferecendo orientação sincera e espiritualidade aplicada com propósito.</p>
+         <h2 class="title">Sobre Jhordana</h2>
+          <p>Sou Jhordana, Astróloga da Energia. Acredito no poder da espiritualidade como caminho para o autoconhecimento, a cura e a transformação. Trabalho com Tarot, Búzios e Magia, unindo sabedoria ancestral e sensibilidade para oferecer atendimentos profundos e personalizados.</p> 
+         <p>Minhas práticas são voltadas para questões de amor, proteção espiritual, prosperidade e desbloqueios energéticos. Com o apoio dos Orixás e da espiritualidade universal, cada consulta é conduzida com ética, empatia e respeito, sempre focada na luz que guia cada jornada individual. Estou aqui para te orientar com sabedoria, acolher sua história e ajudar a abrir caminhos com propósito e verdade.</p>
         </div>
       </div>
     </section>
@@ -187,7 +188,7 @@
         <p class="frase-contato">Está pronta para descobrir o seu caminho espiritual?</p>
         <p class="frase-contato">Agende sua consulta com carinho e total discrição.</p>
   
-        <a href="https://wa.link/mggtll" class="btn-whatsapp" target="_blank">
+        <a href="https://wa.link/jnf3o9" class="btn-whatsapp" target="_blank">
           <i class="fab fa-whatsapp"></i> Agendar Consulta no WhatsApp
         </a>
   
@@ -198,12 +199,12 @@
           </div>
           <div class="info-item">
             <i class="fab fa-instagram"></i>
-            <a href="https://www.instagram.com/espiritualista_lunara/" target="_blank">@espiritualista_lunara</a>
+            <a href="https://www.instagram.com/tarot.da.luz/" target="_blank">@tarot.da.luz</a>
           </div>
         </div>
   
         <div class="footer-bottom">
-          <p>&copy; 2025 <strong>Sensitiva Lunara</strong>. Toda luz e proteção reservadas.</p>
+          <p>&copy; 2025 <strong>Jhordana </strong>. Toda luz e proteção reservadas.</p>
           <p class="creditos">Desenvolvido por <a href="#" target="_blank">Axion Web | Lumen Digital</a></p>
         </div>
       </div>
