--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <link rel="stylesheet" href="src/styles/servicos.css">
   <link rel="stylesheet" href="src/styles/sobre.css">
   <link rel="stylesheet" href="src/styles/contato.css">
-  <title>Jhordana</title>
+  <title>Tarot De Luz</title>
 </head>
 
 <body>
@@ -22,7 +22,7 @@
 
 <header>
   <nav id="navbar">
-    <i class="fa-solid fa-moon"> Jhordana</i>
+    <i class="fa-solid fa-moon"> Tarot De Luz</i>
 
     <ul id="nav_list">
       <!-- Botão X dentro do menu lateral -->
@@ -175,8 +175,8 @@
           <img src="imagens/sobre.png" alt="">
         </div>
         <div class="sobre-texto">
-         <h2 class="title">Sobre Jhordana</h2>
-          <p>Sou Jhordana, Astróloga da Energia. Acredito no poder da espiritualidade como caminho para o autoconhecimento, a cura e a transformação. Trabalho com Tarot, Búzios e Magia, unindo sabedoria ancestral e sensibilidade para oferecer atendimentos profundos e personalizados.</p> 
+         <h2 class="title">Tarot De Luz</h2>
+          <p>Astróloga da Energia. Acredito no poder da espiritualidade como caminho para o autoconhecimento, a cura e a transformação. Trabalho com Tarot, Búzios e Magia, unindo sabedoria ancestral e sensibilidade para oferecer atendimentos profundos e personalizados.</p> 
          <p>Minhas práticas são voltadas para questões de amor, proteção espiritual, prosperidade e desbloqueios energéticos. Com o apoio dos Orixás e da espiritualidade universal, cada consulta é conduzida com ética, empatia e respeito, sempre focada na luz que guia cada jornada individual. Estou aqui para te orientar com sabedoria, acolher sua história e ajudar a abrir caminhos com propósito e verdade.</p>
         </div>
       </div>
@@ -204,7 +204,7 @@
         </div>
   
         <div class="footer-bottom">
-          <p>&copy; 2025 <strong>Jhordana </strong>. Toda luz e proteção reservadas.</p>
+          <p>&copy; 2025 <strong>Tarot De Luz </strong>. Toda luz e proteção reservadas.</p>
           <p class="creditos">Desenvolvido por <a href="#" target="_blank">Axion Web | Lumen Digital</a></p>
         </div>
       </div>
